Bug 93794 - spin buttons not rendered in gtk2/gtk3
Summary: spin buttons not rendered in gtk2/gtk3
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Noel Grandin
URL:
Whiteboard: target:5.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2015-08-31 07:17 UTC by Yousuf Philips (jay) (retired)
Modified: 2016-10-25 19:21 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
how they look (10.60 KB, image/png)
2015-08-31 07:17 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2015-08-31 07:17:35 UTC
Created attachment 118283 [details]
how they look

I'm running my master build which was updated yesterday with gtk2 and all spin buttons arent rendered.

Version: 5.1.0.0.alpha1+
Build ID: af9ec296c1d57847f21e79f90a7b5626986ff6f3
Locale: en-US (en_US.UTF-8)

The commandline kept on outputting stuff like this and changing themes didnt fix the issue.

** (soffice:21423): CRITICAL **: clearlooks_style_draw_box: assertion 'width >= -1' failed

** (soffice:21423): CRITICAL **: clearlooks_style_draw_arrow: assertion 'width >= -1' failed
Comment 1 Maxim Monastirsky 2015-08-31 07:55:10 UTC
Thanks for reporting this. Was about to report it myself. (And it affects also GTK3.)
Comment 2 Maxim Monastirsky 2015-08-31 11:48:15 UTC
Regression of:

commit 258643235c1d6ac21f7b53c94493625a0a6c95bc
Author: Noel Grandin <noel@peralex.com>
Date:   Thu Aug 20 14:22:06 2015 +0200

    add some comments to Rectangle mutation methods
    
    Change-Id: I7e1d737fc1e7a431afd3cde74c2c974e0cbef9ef

@Noel: Hi, any chance you could take look at it? Thanks.
Comment 3 Commit Notification 2015-08-31 12:00:39 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=43691a15b332193341884e0bb40d24601fe123fe

tdf#93794 - spin buttons not rendered in gtk2/gtk3

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Maxim Monastirsky 2015-08-31 12:04:29 UTC
Wow, that was quick. Thanks a lot, Noel!
Comment 5 Robinson Tryon (qubit) 2015-12-17 10:32:24 UTC Comment hidden (obsolete)