tdf#93794 - spin buttons not rendered in gtk2/gtk3

for penance, introduce a unit test

Change-Id: I2c40285732be665e179c477e6e7603aa6f8be5d7